# SekaiTranslatorVParsers

./: LICENSE  README.md  pyproject.toml
src/sekai_parsers/: __init__.py  api.py  engine_registry.py  errors.py  registry.py
src/sekai_parsers/engines/: __init__.py
src/sekai_parsers/engines/kirikiri/: __init__.py  ks_model.py  ks_parser.py
src/sekai_parsers/engines/kirikiri/profiles/: yandere.py
src/sekai_parsers/engines/musica/: __init__.py  sc_parser.py
src/sekai_parsers/engines/musica/profiles/: eden.py  ef.py
src/sekai_parsers/utils/: text.py
tests/: conftest.py  test_musica_sc.py
tests/fixtures/forbidden_love_wife_sister/: 01_01_01.ks
tests/kirikiri/: test_roundtrip_ks.py
tests/kirikiri/fixtures/: 01_01_01.ks
tests/musica/: test_sc_parser.py
