[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sekai-parsers"
version = "0.1.0"
description = "Parser library and engine adapters for SekaiTranslator."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name="Satonix"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sekai_parsers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
